Fixed squashed gameboard.

--- a/src/Style.css
+++ b/src/Style.css
@@ -9,24 +9,28 @@ html, body {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-    font-size: 1em+1vw;
+    font-size: (1em+1vw);
 }
 
 
 .container {
     display: flex;
     flex-direction: column;
-    height: 110vh;
+    height: 100vh;
     width: 100vw;
     overflow-x: hidden;
+    overflow-y:hidden;
 }
 
 .game {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     height: 100%;
     overflow-x: hidden;
+    overflow-y: hidden;
 }
+
+
 
 header {
     background: linear-gradient(45deg,rgba(99,170,188,1),rgba(99,170,188,.9));
@@ -34,7 +38,9 @@ header {
     height: 7vh;
     text-align: center;
     overflow-x: hidden;
-    font-size: .8em;
+    overflow-y: hidden;
+    font-size: .7em;
+    border-bottom: 3px solid rgba(0,0,0,.5);
 }
 
 footer {
@@ -46,6 +52,8 @@ footer {
     justify-content: space-between;
     padding: 0 1.5vw;
     overflow-x: hidden;
+    overflow-y: hidden;
+    border-top: 3px solid rgba(0,0,0,.5);
     
 }
 
@@ -53,25 +61,25 @@ footer {
 
 .wordList {
     display: flex;
+    flex:1;
     color: rgb(235,235,235);
     flex-direction: column;
     font-size: 1.3em;
-    height: 35vh;
+    height: 100%;
     margin: 0;
-    width: 100vw;
+    width: 100%;
     padding: 1vh 0;
     background:linear-gradient(45deg, rgba(33,101,131,1), rgba(33,101,131,.9));
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     box-shadow: 0 1vh .2vh 1vh rgba(0,0,0,.5);
-    overflow-x: hidden;
+    overflow-y:hidden;
 }
 
 .wordList ol {
     display: grid;
-    width: 95vw;
-    grid-template-columns: 23vw 23vw 23vw;
-    grid-template-rows: 5vh 5vh 5vh;
+    grid-template-columns: 23% 23% 23%;
+    grid-template-rows: 25% 25% 25%;
     grid-column-gap: 1vw;
     grid-row-gap: 1vh;
     justify-content: space-evenly;
@@ -85,8 +93,8 @@ footer {
 
 .inputField {
     display: flex;
-    justify-content: center;
-    width: 20vw;
+    justify-content: space-between;
+    width: 100%;
     max-width: 15em;
     color: rgb(240,240,240);
     border: none;
@@ -100,9 +108,8 @@ footer {
     color: rgb(5,5,5);
     border: none;
     border-radius: 1vh;
-    width: 20vw;
-    max-width: 12rem;
-    margin-left: 1vw;
+    width: 100%;
+    margin-left: auto;
     padding-left: 2vw;
     box-shadow: .1vh .1vh 0vh .1vh rgba(0,0,0,0.5);
 }
@@ -113,36 +120,39 @@ footer {
 .wordList > form > div {
     display: flex;
     justify-content: space-evenly;
-    padding-top: 1vh;
+    padding: 1vh 0;
 }
 
 .gameArea {
     display: flex;
+    flex: 1;
     flex-direction: column;
-    /*background-color: rgb(33,101,131);*/
     background-color: #63aabc;
-background-image: url("data:image/svg+xml,%3Csvg width='64' height='64' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8 16c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zm33.414-6l5.95-5.95L45.95.636 40 6.586 34.05.636 32.636 2.05 38.586 8l-5.95 5.95 1.414 1.414L40 9.414l5.95 5.95 1.414-1.414L41.414 8zM40 48c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zM9.414 40l5.95-5.95-1.414-1.414L8 38.586l-5.95-5.95L.636 34.05 6.586 40l-5.95 5.95 1.414 1.414L8 41.414l5.95 5.95 1.414-1.414L9.414 40z' fill='%23216583' fill-opacity='0.38' fill-rule='evenodd'/%3E%3C/svg%3E");
-    justify-content: space-evenly;
+    background-image: url("data:image/svg+xml,%3Csvg width='64' height='64' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8 16c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zm33.414-6l5.95-5.95L45.95.636 40 6.586 34.05.636 32.636 2.05 38.586 8l-5.95 5.95 1.414 1.414L40 9.414l5.95 5.95 1.414-1.414L41.414 8zM40 48c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zM9.414 40l5.95-5.95-1.414-1.414L8 38.586l-5.95-5.95L.636 34.05 6.586 40l-5.95 5.95 1.414 1.414L8 41.414l5.95 5.95 1.414-1.414L9.414 40z' fill='%23216583' fill-opacity='0.38' fill-rule='evenodd'/%3E%3C/svg%3E");
+    justify-content: flex-start;
     align-items: center;
-    height: 65vh;
+    height: 100%;
     box-shadow: 0 1vh .2vh 1vh rgba(0,0,0,2);
     overflow-x: hidden;
+    overflow-y:hidden;
+    padding: 2vh 0;
     
 }
 
-.gameArea > div {
-    flex: 0;
-}
+
 
 .gameBoard {
     background-color: rgb(240,240,240);
-    height: 45vh;
-    width: 45vh;
+    height: 32vw;
+    width: 32vw;
+    margin-top: 3vh;
     display: grid;
-    grid-template-columns: 15vh 15vh 15vh;
-    grid-template-rows: 15vh 15vh 15vh;
+    grid-template-columns: 33% 33% 33%;
+    grid-template-rows: 33% 33% 33%;
     grid-column-gap: 0.5vh;
     grid-row-gap: 0.5vh;
+    justify-content: space-between;
+    align-content: space-between; 
     border: 3px solid rgb(240,240,240);
     border-radius: 3px;
     box-shadow: 0vh 0vw 1vw .3vw rgba(0,0,0,.2);
@@ -150,16 +160,17 @@ background-image: url("data:image/svg+xml,%3Csvg width='64' height='64' viewBox=
 
 .buttons {
     display: flex;
+    height: 20%;
     align-items: flex-end;
     justify-content: space-between;
     background-color: rgb(99,170,188);
-    margin-top: auto;
 }
 
 .buttons button {
     flex:1;
     background:linear-gradient(45deg, rgba(33,101,131,1), rgba(33,101,131,.9));
     border: 1px solid;
+    height: 100%;
     border-radius: 3px;
 }
 
@@ -167,17 +178,19 @@ background-image: url("data:image/svg+xml,%3Csvg width='64' height='64' viewBox=
     border-radius: 5px;
     background-color: rgba(240,240,240,0.8);
     border: 1px solid rgb(33,101,131);
-    width: 10vh;
-    height: 8vh;
-    font-size: 0.9em;
-    box-shadow: 1px 1px 1px 1px rgb(33,101,131);
+    width: 20%;
+    min-height: 2em;
+    font-size: 0.75em;
+    box-shadow: 2px 2px 1px 1px rgba(33,101,131,0.2);
 }
 
 .gameSquare {
+    font-size: 3vw;
     display: flex;
     flex-direction: column;
-    height: 13.5vh;
-    width: 13.5vh;
+    justify-content: space-between;
+    height: 95%;
+    width: 95%;
     background: linear-gradient(45deg,rgba(99,170,188,1),rgba(99,170,188,.8));
     color: black;
     border-radius: 3px;
@@ -187,17 +200,62 @@ background-image: url("data:image/svg+xml,%3Csvg width='64' height='64' viewBox=
 
 .squareWord {
     text-align: center;
+    height: 35%;
+    line-height: 100%;
     color: rgb(5,5,5);
     overflow: hidden;
     text-overflow: clip;
 }
 
 .squareMark {
-    text-align: center;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    height: 50%;
+    background-color: transparent;
     color: rgb(5,5,5);
 }
 
+.winner {
+    font-size: 3vw;
+    position: absolute;
+    color: rgb(13, 5, 133);
+    background-color: rgba(255, 255, 255, 0.8);
+    box-shadow: 1px 1px 10px 10px rgb(13, 5, 133);
+    top: 35%;
+    text-align: center;
+}
 
-.gameSquare h3 {
-    padding-top: 5px;
+
+@media screen and (max-width: 700px) {
+    .container {
+        height: 110vh;
+        min-height: 150vw;
+    }
+    .game {
+        flex-direction: column;
+    }
+
+    .wordList {
+        max-height: 30%;
+        flex: 1;
+    }
+
+    .gameArea {
+        min-height: 80vw;
+    }
+
+    .gameBoard {
+        height: 80%;
+        width: 80%;
+    }
+
+    .gameSquare {
+        font-size: 5vw;
+    }
+
+    .winner {
+        top: 70%;
+        width: 90%;
+    }
 }
